fix(core): multiple potential deadlocks and races on the AbstractScheduler